fixed yaml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install build tools
-        run: sudo apt-ger install -y build-essential
+        run: sudo apt-get install -y build-essential
 
       - name: Build
         run: make
