Try to fix error

--- a/.github/workflows/automake.yml
+++ b/.github/workflows/automake.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential autoconf automake
+          sudo apt-get install -y build-essential autoconf automake make g++
 
       - name: Generate config scripts
         run: |
