--- a/.github/workflows/automake.yml
+++ b/.github/workflows/automake.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           aclocal
           autoconf
-          make check
+          automake --add-missing
 
       - name: Build and configure
         run: |
