Added continuos integration action to github that builds deb package

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,27 @@
 AUTOMAKE_OPTIONS = foreign
 bin_PROGRAMS = program
 program_SOURCES = main.cpp func.cpp func.h
+
+PACKAGE = program
+VERSION = 1.0
+PACKAGE_BUGREPORT = shapovalov.denis@lll.kpi.ua
+
+CTRLF_DIR = $(CURDIR)/deb/DEBIAN
+CTRLF_NAME = $(CTRLF_DIR)/control
+
+.PHONY: deb debug
+
+deb:
+	mkdir -p $(CTRLF_DIR)
+	echo Package: $(PACKAGE) > $(CTRLF_NAME)
+	echo Version: $(VERSION) >> $(CTRLF_NAME)
+	echo Architecture: all >> $(CTRLF_NAME)
+	echo Maintainer: $(PACKAGE_BUGREPORT) >> $(CTRLF_NAME)
+	echo -n "Description:" >> $(CTRLF_NAME)
+	cat aztec.1 >> $(CTRLF_NAME)
+	make DESTDIR=$(CURDIR)/deb install
+
+debug:
+	@echo "${PACKAGE}"
+	@echo "${VERSION}"
+	@echo "${PACKAGE_BUGREPORT}"
