Add compiled test

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
-AUTOMAKE_OPTIONS = foreign
-bin_PROGRAMS = program
+AUTOMAKE_OPTIONS = foreign subdir_objects
+bin_PROGRAMS = program test
+test+SOUURCES = tests/test.cpp func.cpp
 program_SOURCES = main.cpp func.cpp func.h
 
 PACKAGE = program
