--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Install tools
         run: |
-          sudo apt get update
-          sudo apt get install -y build-essential libgtest-dev cmake
+          sudo apt-get update
+          sudo apt-get install -y build-essential libgtest-dev cmake
 
       - name: Build
         run: |
